# eci

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docs.drawio  hardware.drawio  sdkconfigd  tasks.drawio  uart_test.py
components/fiware/: CMakeLists.txt  Kconfig  fiware_idm.c  fiware_task.c  iot_agent.c
components/fiware/include/: fiware_idm.h  fiware_task.h  iot_agent.h
components/json/: CmakeLists.txt
components/mau/: CMakeLists.txt  Kconfig  mau_task.c  uart.c
components/mau/include/: mau_task.h
components/ph/: CMakeLists.txt  Kconfig  ph.c  sensor.c
components/ph/include/: ph.h  (+1 more)
components/server/: CMakeLists.txt  Kconfig  server.c
components/state/: CMakeLists.txt  app_state.c
components/stepper/: CMakeLists.txt  Kconfig  stepper.c
components/task_intercom/: CMakeLists.txt  Kconfig  task_intercom.c
components/uart/: CMakeLists.txt  Kconfig  communication.c  kawasaki.c  uart_task.c
components/vreg/: CMakeLists.txt  Kconfig  vreg.c
components/wifi/: CMakeLists.txt  Kconfig  wifi.c
docker/: .env  docker-compose.yaml
docs/: Doxyfile
main/: CMakeLists.txt  Kconfig.projbuild  analog.c  app_state.c  app_tasks.c  communication.c  fiware.c  io.c  kawasaki.c  main.c  server.c  task_manager.c  uart.c  wifi.c
main/include/: analog.h  app_state.h  app_tasks.h  communication.h  fiware.h  io.h  kawasaki.h  task_manager.h  uart.h
main/tasks/: common.c  mau_task.c  task_intercom.c  uart_task.c
utils/: .env  pyproject.toml
utils/utils/: __init__.py  main.py
utils/utils/json/: create_iot_device.json  register_service_group.json
(+12 files in other folders)
