[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Peter Puska <p.puska@lasram.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
requests = "^2.31.0"
click = "^8.1.3"

[tool.poetry.scripts]
ediutils = "utils.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
